--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pharmacy Technician National Prep Quiz</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Add Paystack script -->
-    <script src="https://js.paystack.co/v1/inline.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9712711078211881" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -44,7 +43,12 @@
     <div id="subscription-screen" style="display: none;">
         <h2>Unlock Full Access</h2>
         <p class="code-instructions">
-            Free users can access 15 questions per course. For full access (25, 50, or 100 questions), subscribe by selecting a plan and making payment via Paystack:
+            Free users can access 15 questions per course. For full access (25, 50, or 100 questions), subscribe by following these steps:
+            <ol>
+                <li>Email <a href="mailto:shefzlaw1234@gmail.com">shefzlaw1234@gmail.com</a> to receive payment details for your chosen plan (NGN 1000 for 3 months or NGN 2000 for 7 months).</li>
+                <li>Make the payment as instructed.</li>
+                <li>Call <a href="tel:07043846346" class="phone-link">07043846346</a> to confirm your payment and receive your access code.</li>
+            </ol>
         </p>
         <div class="form-group">
             <label>Subscription Plan:</label>
@@ -53,9 +57,13 @@
             <input type="radio" name="subscription-plan" id="plan-7months" value="7">
             <label for="plan-7months">7 Months (NGN 2000)</label>
         </div>
-        <button id="paystack-pay-btn">Pay with Paystack</button>
+        <div class="form-group">
+            <label for="access-code">Access Code:</label>
+            <input type="text" id="access-code" required>
+        </div>
+        <button id="submit-code-btn">Submit Code</button>
         <button id="free-user-btn">I’m a Free User</button>
-        <p class="warning">Warning: Complete your payment to receive full access to the quiz.</p>
+        <p class="warning">Warning: Do not share your access code with others, as it may lead to restricted access.</p>
         <p id="subscription-error" class="warning"></p>
     </div>
     <div id="start-screen" style="display: none;">
@@ -82,7 +90,18 @@
         </div>
         <button id="start-btn">Start Quiz</button>
         <p id="start-error" class="warning"></p>
-        <div id="ad-container"></div>
+        <div id="ad-container">
+            <!-- Google Ads -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-9712711078211881"
+                 data-ad-slot="7245161040"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
     </div>
     <div id="quiz-screen" style="display: none;">
         <div class="timer">Time Left: <span id="time-left">00:00</span></div>
